[gd_scene load_steps=4 format=3 uid="uid://cwbr8q8pvighk"]

[ext_resource type="Script" path="res://Scripts/controls.gd" id="1_4o3gj"]
[ext_resource type="Texture2D" uid="uid://dcpy1tsg4cgi" path="res://Assets/controls.png" id="2_ivuuk"]
[ext_resource type="FontFile" uid="uid://ccq0hnvmkqnrl" path="res://Assets/fonts/Boxy-Bold.ttf" id="3_0nq2w"]

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4o3gj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("2_ivuuk")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
offset_top = 639.0
offset_right = 1280.0
offset_bottom = 704.0
alignment = 1

[node name="back" type="Button" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0nq2w")
theme_override_font_sizes/font_size = 50
text = "back"

[node name="SceneChangeTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/HBoxContainer2/back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
